exports[`changeAccounts dispatches an change to setAccount 1`] = `
Array [
  Object {
    "savedAccount": null,
    "type": "GIVE.SET_SAVED_ACCOUNT",
  },
]
`;

exports[`changeAccounts dispatches modal.hide() 1`] = `
Array [
  Object {
    "type": "MODAL.SET_VISIBILITY",
    "visible": false,
  },
]
`;

exports[`choose set's a savedAccount state 1`] = `
Object {
  "date": "2016-11-16T21:45:41.275Z",
  "id": 1,
  "name": "Test Card 1",
  "payment": Object {
    "accountNumber": "4111111111111111",
    "paymentType": "Visa",
  },
}
`;

exports[`renders layout correctly delivers props to layout 1`] = `
<ChangePayments savedAccounts={{...}} currentAccount={{...}} dispatch={[Function]}>
  <Layout savedAccounts={{...}} selectedAccount={{...}} chooseAccount={[Function]} changeAccounts={[Function]}>
    <div className="soft-double-top">
      <div className="soft-sides flush-bottom push-double-top@lap-and-up">
        <h4 className="text-center flush-bottom">
          Change Payment Account
        </h4>
      </div>
      <div className="soft">
        <Component onClick={[Function]} accountName="Test Card 1" accountId={1} paymentAccount="4111111111111111" paymentType="Visa" selectedAccountId={1}>
          <div style={{...}} id={1} onClick={[Function]}>
            <div className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
              <div className="display-inline-block soft-half-ends one-whole">
                <h6 className="flush-bottom float-left text-dark-tertiary">
                  Test Card 1
                </h6>
              </div>
              <h5 className="hard one-whole flush-bottom text-dark-tertiary">
                ************1111
                <span className="float-right soft-half-left">
                  <AccountType width="40px" height="25px" type="Visa">
                    <Visa width="40px" height="25px" style={{...}}>
                      <div style={{...}} className="background--fill display-inline-block" />
                    </Visa>
                  </AccountType>
                </span>
              </h5>
            </div>
            <div className="locked-ends locked-sides">
              <input type="checkbox" id="label1" readOnly={true} checked={true} style={{...}} />
              <label htmlFor="label1" style={{...}} />
            </div>
          </div>
        </Component>
        <Component onClick={[Function]} accountName="Test Card 2" accountId={2} paymentAccount="4111111111111111" paymentType="Visa" selectedAccountId={1}>
          <div style={{...}} id={2} onClick={[Function]}>
            <div className="soft-ends push-double-left text-left hard-right outlined--light outlined--bottom relative">
              <div className="display-inline-block soft-half-ends one-whole">
                <h6 className="flush-bottom float-left text-dark-tertiary">
                  Test Card 2
                </h6>
              </div>
              <h5 className="hard one-whole flush-bottom text-dark-tertiary">
                ************1111
                <span className="float-right soft-half-left">
                  <AccountType width="40px" height="25px" type="Visa">
                    <Visa width="40px" height="25px" style={{...}}>
                      <div style={{...}} className="background--fill display-inline-block" />
                    </Visa>
                  </AccountType>
                </span>
              </h5>
            </div>
            <div className="locked-ends locked-sides">
              <input type="checkbox" id="label2" readOnly={true} checked={false} style={{...}} />
              <label htmlFor="label2" style={{...}} />
            </div>
          </div>
        </Component>
        <button className="btn one-whole push-double-top soft-sides push-bottom" onClick={[Function]}>
          Change Account
        </button>
        <p>
          <small>
            <em>
              You can enter a new payment account before confirming your contribution.
            </em>
          </small>
        </p>
      </div>
    </div>
  </Layout>
</ChangePayments>
`;

exports[`renders layout sets selectedAccount 1`] = `
Object {
  "date": "2016-11-16T21:45:41.275Z",
  "id": 1,
  "name": "Test Card 1",
  "payment": Object {
    "accountNumber": "4111111111111111",
    "paymentType": "Visa",
  },
}
`;
